Two SVG-Editor buglets
Should not be able to convert a foreignObject
to a path.
#foreignObject_panel should always be initially
invisible.

--- a/public/svg-edit/editor/svg-editor.css
+++ b/public/svg-edit/editor/svg-editor.css
@@ -1,4 +1,4 @@
-﻿body {
+body {
 	background: #D8D8D8;
 }
 
@@ -410,6 +410,7 @@
 #svg_editor #line_panel,
 #svg_editor #image_panel,
 #svg_editor #text_panel,
+#svg_editor #foreignObject_panel,
 #svg_editor #path_node_panel {
 	display: none;
 }
